vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__design__tests__library_clause_missing_semicolon.snap
---
source: vhdl_syntax/src/parser/productions/design.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
library ieee

== tree ==
DesignFile
  DesignUnit
    ContextClause
      LibraryClause
        Keyword(Library)
        LogicalNameList
          Identifier 'ieee'
  Eof

== diagnostics ==
1:13 Expected([Token(SemiColon)])
1:13 Expected([Token(Keyword(Architecture)), Token(Keyword(Package)), Token(Keyword(Entity)), Token(Keyword(Configuration)), Token(Keyword(Context))])
