vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__design__tests__parse_simple_entity.snap
---
source: vhdl_syntax/src/parser/productions/design.rs
expression: "to_test_text(Parser::design_file,\n\"\\\nentity my_ent is\nbegin\nend my_ent;\n\nentity my_ent2 is\nbegin\nend entity;\n\",)"
---
DesignFile
  DesignUnit
    EntityDeclaration
      EntityDeclarationPreamble
        Keyword(Entity)
        Identifier 'my_ent'
        Keyword(Is)
      EntityStatements
        DeclarationStatementSeparator
          Keyword(Begin)
      EntityDeclarationEpilogue
        Keyword(End)
        Identifier 'my_ent'
        SemiColon
  DesignUnit
    EntityDeclaration
      EntityDeclarationPreamble
        Keyword(Entity)
        Identifier 'my_ent2'
        Keyword(Is)
      EntityStatements
        DeclarationStatementSeparator
          Keyword(Begin)
      EntityDeclarationEpilogue
        Keyword(End)
        Keyword(Entity)
        SemiColon
  Eof
